[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule_free_optimizers_keras"
version = "0.1.0"
authors = [
  {name = "Tim Hochberg", email = "tim@hochberg.info"},
]
maintainers = [
  {name = "Tim Hochberg", email = "tim@hochberg.info"},
]
readme = "README.md"
description = "Schedule Free Optimizers implemented in Keras"
license = {text = "Apache-2.0"}

[tool.setuptools]
packages = ["schedule_free_optimizers"]

